# speaking-llm

./: README.md  agent_config.yaml  pyproject.toml  speaking_llm.yaml
speaking_llm/: speaking_llm.py  speech_output.py
